[package]
name = "svg2gcode"
version = "0.0.2"
authors = ["Sameer Puri <sameer@purisa.me>"]
edition = "2018"
description = "Convert paths in SVG files to GCode for a pen plotter, laser engraver, or other machine."

[dependencies]
g-code = "0.2"
lyon_geom = ">= 0.17.2"
euclid = "0.22"
structopt = "0.3"
log = "0"
env_logger = "0"
uom = "0.31.0"
roxmltree = "0"
svgtypes = "0"
codespan-reporting = "0.11"
paste = "1"

[dev-dependencies]
pretty_assertions = "0.6"
