[workspace]
members = ["lib", "cli", "wasm"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
authors = ["Sameer Puri <crates@purisa.me>"]
edition = "2024"
repository = "https://github.com/sameer/svg2gcode"
license = "MIT"

[workspace.dependencies]
g-code = "0.6.0"
log = "0"
roxmltree = "0.21"
serde_json = "1"
svgtypes = "0.16"
