[package]
name = "svg2gcode-cli"
version = "0.0.17"
description = "Command line interface for svg2gcode"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
svg2gcode = { path = "../lib", version = "0.3.2", features = ["serde"] }
env_logger = { version = "0", default-features = false, features = [
    "atty",
    "termcolor",
    "humantime",
] }
log.workspace = true
g-code.workspace = true
clap = { version = "4", features = ["cargo", "derive"] }
codespan-reporting = "0.11"
roxmltree.workspace = true
serde_json.workspace = true
svgtypes.workspace = true

[[bin]]
name = "svg2gcode"
path = "src/main.rs"
