[package]
name = "svg2gcode-cli"
version = "0.0.17"
description = "Command line interface for svg2gcode"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
svg2gcode = { path = "../lib", version = "0.3.2", features = ["serde"] }
env_logger = "0.11"
log.workspace = true
g-code.workspace = true
# Latest version of clap supporting Rust 1.73, needed for the macOS release in CI
clap = { version = "^4.0,<=4.4.18", features = ["derive"] }
codespan-reporting = "0.11"
roxmltree.workspace = true
serde_json.workspace = true
svgtypes.workspace = true

[[bin]]
name = "svg2gcode"
path = "src/main.rs"
