[package]
name = "svg2gcode-cli"
version = "0.0.18"
description = "Command line interface for svg2gcode"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
svg2gcode = { path = "../g_code", version = "0.4.0", features = ["serde"] }
env_logger = "0.11"
log.workspace = true
g-code.workspace = true
clap = { version = "4", features = ["derive"] }
codespan-reporting.workspace = true
roxmltree.workspace = true
serde_json.workspace = true
svgtypes.workspace = true

[[bin]]
name = "svg2gcode"
path = "src/main.rs"
