[package]
name = "svg2gcode"
version = "0.4.0"
description = "Convert paths in SVG files to GCode for a pen plotter, laser engraver, or other machine."
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "g-code/serde", "svg2star/serde"]

[dependencies]
svg2star = { path = "../star", version = "0.4.0" }
g-code.workspace = true
rust_decimal = { version = "1", default-features = false }
lyon_geom.workspace = true
roxmltree.workspace = true
paste.workspace = true

[dependencies.serde]
workspace = true
optional = true
features = ["derive", "std"]

[dev-dependencies]
serde_json.workspace = true
pretty_assertions = "1.4.1"
svgtypes.workspace = true
