[package]
name = "svg2gcode"
version = "0.3.4"
description = "Convert paths in SVG files to GCode for a pen plotter, laser engraver, or other machine."
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "dep:serde_repr", "g-code/serde"]

[dependencies]
g-code.workspace = true
peg = "0.8"
rand = "0.8"
rustc-hash = "1"
rust_decimal = { version = "1", default-features = false }
lyon_geom = "=1.0.6"
euclid = "0.22"
log.workspace = true
uom = "0.38"
roxmltree.workspace = true
svgtypes.workspace = true
paste = "1"
i_overlay = "4.3"

[dependencies.serde]
default-features = false
optional = true
version = "1"
features = ["derive", "std"]

[dependencies.serde_repr]
optional = true
version = "0.1"

[dev-dependencies]
serde_json.workspace = true
pretty_assertions = "1.4.1"
