[package]
name = "svg2gcode-wasm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
g-code.workspace = true
getrandom = { version = "0.2", features = ["js"] }
regex = "1"
roxmltree.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
svg2gcode = { path = "../lib", features = ["serde"] }
wasm-bindgen = "=0.2.92"
js-sys = "0.3"
xmltree = "0.11"
