[package]
name = "svg2gcode-web"
version = "0.0.17"
description = "Convert vector graphics to g-code for pen plotters, laser engravers, and other CNC machines"
homepage = "https://sameer.github.io/svg2gcode/"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wasm-bindgen = "0.2"
svg2gcode = { path = "../lib", version = "0.3.2", features = ["serde"] }
roxmltree.workspace = true
g-code.workspace = true
codespan-reporting = "0.11"
codespan = "0.11"
serde = "1"
paste = "1"
log.workspace = true
svgtypes.workspace = true
serde_json.workspace = true
thiserror = "1.0"
zip = { version = "0.6", default-features = false }

yew = { version = "0.21", features = ["csr"] }
yewdux = "0.10"
web-sys = { version = "0.3", features = [] }
wasm-logger = "0.2"
gloo-file = { version = "0.3", features = ["futures"] }
gloo-timers = "0.3"
base64 = "0.22"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
