[package]
name = "svg2gcode-web"
version = "0.0.18"
description = "Convert vector graphics to g-code for pen plotters, laser engravers, and other CNC machines"
homepage = "https://sameer.github.io/svg2gcode/"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wasm-bindgen = "0.2"
svg2gcode = { path = "../g_code", version = "0.4.0", features = ["serde"] }
svg2star = { path = "../star", version = "0.4.0", features = ["serde"] }
roxmltree.workspace = true
g-code.workspace = true
codespan-reporting.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
paste.workspace = true
log.workspace = true
svgtypes.workspace = true
serde_json.workspace = true
thiserror = "2"
zip = { version = "8", default-features = false }

yew = { version = "0.21", features = ["csr"] }
yewdux = "0.11"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "Url", "Window"] }
wasm-logger = "0.2"
gloo-file = { version = "0.4", features = ["futures"] }
gloo-timers = "0.4"
base64 = "0.22"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
